# audacious-plugin-fadeout

./: .gitignore  CMakeLists.txt  README.md  audacious-plugin-fadeout.c  audacious-plugin-fadeout.cc
po/: Makevars  POTFILES.in  audacious-plugin-fadeout.pot  de.po
